--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -10,7 +10,8 @@ header {
 
 .nav-part .link {
     color: var(--tittle-text-color);
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
+    // transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
+    @include transition (color, null, null, 250ms, cubic-bezier(0.4, 0, 0.2, 1)) ;
     &:hover , &:focus {
     color:var(--accent-color) ;
 }
