--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,7 +2,11 @@
 
 @import "./utils/vars" ;
 
-@import "./base/reset" ;
+
+
+@import "./base/base" ;
+@import "./utils/utils";
+
 
 @import "./components/container" ;
 
