--- a/sass/portfolio/_holder.scss
+++ b/sass/portfolio/_holder.scss
@@ -18,11 +18,13 @@
                 font-weight: 500;
                     font-size: 16px;
                     line-height: 1.62;
-                transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) , color 250ms cubic-bezier(0.4, 0, 0.2, 1) ,
-                box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+                // transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) , 
+                //             color 250ms cubic-bezier(0.4, 0, 0.2, 1) ,
+                //             box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+                @include transition (color, background-color, box-shadow, 250ms, cubic-bezier(0.4, 0, 0.2, 1)) ;
             
-                            &:hover,
-                            &:focus {
+                            &:hover, &:focus {
                                 background-color:var(--accent-color);
                                 color: var(--white-color);
                             }
