--- a/sass/portfolio/_assortment.scss
+++ b/sass/portfolio/_assortment.scss
@@ -28,6 +28,7 @@ main {
 
 .under-section {
     color: var(--general-text-color);
+    @include font(null, 16px, 1.88, 0.06em);
     font-size: 16px;
         line-height: 1.88;
     letter-spacing: 0.06em;
