--- a/sass/utils/_mixin.scss
+++ b/sass/utils/_mixin.scss
@@ -3,3 +3,11 @@
     transition-duration: $time;
     transition-timing-function: $function;
 }
+
+@mixin font ($fw, $fs, $lh, $ls) {
+    font-weight: $fw;
+     font-size: $fs;
+     line-height: $lh;
+     letter-spacing: $ls ;
+   
+}
