--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -1,8 +1,6 @@
 .section-tittle {
     color: var(--tittle-text-color);
-        font-weight: 700;
-        font-size: 14px;
-        line-height: 1.14;
+    @include font(700, 14px, 1.14 , null);
         text-transform: uppercase;
 }
  
@@ -24,8 +22,7 @@
         }
         .text {
             color: var(--general-text-color);
-            font-size: 14px;
-            line-height: 1.71;
+            @include font(null, 14px, 1.71, null);
         }
         
 }
