--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -23,9 +23,8 @@
             background-color: var(--accent-color);
                 border: 0;
                 border-color: var(--accent-color);
-                font-weight: 500;
-                font-size: 16px;
-                line-height: 1.8; 
+
+                @include font(500, 16px, 1.8, null);
             
                 transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
                 &:hover,&:focus {
@@ -37,13 +36,9 @@
 
 
 
-.hero-tittle {
+.heading {
    color:var(--white-color);
-   font-weight: 900;
-       font-size: 44px;
-       line-height: 1.4;
-       /* text-align: center; */
-       letter-spacing: 0.06em;
+@include font(900, 44px, 1.4, 0.06em);
        text-transform: uppercase;
        width: 730px;
        padding-bottom: 0;
