--- a/sass/layout/_logo.scss
+++ b/sass/layout/_logo.scss
@@ -6,10 +6,8 @@
     color:var(--accent-color);
     text-decoration: none;
     font-family: 'Raleway', sans-serif; 
-        font-weight: 700;
-        font-size: 26px;
-        line-height: 1.19; 
-         margin-right: 93px;
+    @include font(700, 26px, 1.19, null);
+        
          padding-top: 24px;
          padding-bottom: 24px;
 }
