--- a/sass/layout/_rag-customers.scss
+++ b/sass/layout/_rag-customers.scss
@@ -1,24 +1,22 @@
-.regular-customers {
+.customers {
     padding: 94px 0;
     background-color: var(--white-color);
 }
 
 .custom-tittle {
-    font-weight: 700;
-    font-size: 36px;
-        line-height: 1.16;
+    @include font(700, 36px, 1.16, null);
     margin-bottom: 50px;
     text-align: center;
     color: var(--tittle-text-color);
 }
 
-.customers {
+.customers__list {
 display: flex;
 gap: 30px;
  
 }
 
-.rag-soc-link {
+.customers__link {
      display: flex;
         justify-content: center;
         align-items: center;
@@ -36,12 +34,12 @@ gap: 30px;
     
 }
 
-.rag-soc-icon {
+.customers__icon {
     fill: var(--icon-color);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
 
-    .rag-soc-link:hover & ,
-    .rag-soc-link:focus & {
+    .customers__link:hover & ,
+    .customers__link:focus & {
         fill: var(--accent-color);
     }
 }
