--- a/sass/layout/_special.scss
+++ b/sass/layout/_special.scss
@@ -1,8 +1,6 @@
 .section-tittle-special{
     color: var(--tittle-text-color);
-    font-weight: 700;
-        font-size: 36px;
-        line-height: 1.17;
+    @include font(700, 36px, 1.17, null);
         text-align: center;
         margin-bottom: 50px;
 }
@@ -32,10 +30,8 @@
     padding-top: 27px;
     padding-bottom: 27px;
 
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-     
+    @include font(700, 14px, 1.14, null);
+    
      text-transform: uppercase;
     color: var(--white-color);
     background-color: rgba(47, 48, 58, 0.8);
