--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -1,8 +1,7 @@
 .team-tittle{
     color: var(--tittle-text-color);
-    font-weight: 700;
-        font-size: 36px;
-        line-height: 1.17;
+
+    @include font(700, 36px, 1.17, null);
         text-align: center;
     
     margin-bottom: 50px;
@@ -10,9 +9,7 @@
 
 .team-name {
     color: var(--tittle-text-color);
-    font-weight: 500;
-        font-size: 16px;
-        line-height: 1.19;
+    @include font(500, 16px, 1.19, null);
     
     text-align: center;
     margin-bottom: 10px;
