--- a/css/main.css
+++ b/css/main.css
@@ -13,19 +13,6 @@
   --icon-color: #AFB1B8 ;
 }
 
-.visually-hidden {
-  position: absolute;
-  white-space: nowrap;
-  width: 1px;
-  height: 1px;
-  overflow: hidden;
-  border: 0;
-  padding: 0;
-  clip: rect(0 0 0 0);
-  clip-path: inset(50%);
-  margin: -1px;
-}
-
 p, h1, h2, h3, h4, h5, h6 {
   margin: 0;
 }
@@ -102,6 +89,185 @@ a {
   margin: 0 auto;
 }
 
+.header-container {
+  display: flex;
+  align-items: center;
+}
+
+.footer-container {
+  display: flex;
+  align-items: baseline;
+}
+
+.section-tittle {
+  color: var(--tittle-text-color);
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
+}
+
+.section-tittle-special {
+  color: var(--tittle-text-color);
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+.team-tittle {
+  color: var(--tittle-text-color);
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+.custom-tittle {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  margin-bottom: 50px;
+  text-align: center;
+  color: var(--tittle-text-color);
+}
+
+.socio__tittle {
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  color: var(--white-color);
+  margin-bottom: 20px;
+}
+
+.subscribe__tittle {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--white-color);
+  margin-bottom: 20px;
+}
+
+.button {
+  font-family: inherit;
+  color: var(--white-color);
+  cursor: pointer;
+}
+
+.hero__button {
+  color: var(--white-color);
+  padding: 10px 32px;
+  width: 216px;
+  border: var(--accent-color);
+  border-radius: 4px;
+  background-color: var(--accent-color);
+  border: 0;
+  border-color: var(--accent-color);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.8;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.hero__button:hover, .hero__button:focus {
+  background-color: var(--secondary-button-colar);
+}
+
+.pattern__button {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  width: 200px;
+  height: 50px;
+  margin: 0 0 0 12px;
+  padding-left: 28px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  cursor: pointer;
+  color: var(--white-color);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.pattern__button:hover,
+.pattern__button:focus {
+  background-color: var(--secondary-button-colar);
+}
+
+.btn-list {
+  display: flex;
+  margin-bottom: 50px;
+  justify-content: center;
+  gap: 8px;
+}
+
+.button-portfolio {
+  padding: 6px 22px;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.button-portfolio:hover, .button-portfolio:focus {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.team-soc {
+  gap: 10px;
+  display: flex;
+  justify-content: center;
+}
+
+.team-soc-icon {
+  fill: var(--icon-color);
+}
+.team-soc-link:hover .team-soc-icon, .team-soc-link:focus .team-soc-icon {
+  fill: var(--white-color);
+}
+
+.team-soc-link {
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background-color: var(--white-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.team-soc-link:hover, .team-soc-link:focus {
+  background-color: var(--accent-color);
+}
+
+.socio__list {
+  display: flex;
+  gap: 10px;
+}
+
+.socio__link {
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.socio__link:hover,
+.socio__link:focus {
+  background-color: var(--accent-color);
+}
+
+.socio__icon {
+  fill: var(--white-color);
+}
+
 .studio {
   color: var(--logo-dark-color);
 }
@@ -124,11 +290,6 @@ a {
 
 .header__logo {
   margin-right: 93px;
-}
-
-.header-container {
-  display: flex;
-  align-items: center;
 }
 
 .navigation__link {
@@ -220,22 +381,6 @@ a {
   background-size: cover;
   background-position: 50% 50%;
 }
-.hero .button {
-  padding: 10px 32px;
-  width: 216px;
-  border: var(--accent-color);
-  border-radius: 4px;
-  background-color: var(--accent-color);
-  border: 0;
-  border-color: var(--accent-color);
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.8;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.hero .button:hover, .hero .button:focus {
-  background-color: var(--secondary-button-colar);
-}
 
 .heading {
   color: var(--white-color);
@@ -248,14 +393,6 @@ a {
   padding-bottom: 0;
   margin: 0 auto;
   margin-bottom: 30px;
-}
-
-.section-tittle {
-  color: var(--tittle-text-color);
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  text-transform: uppercase;
 }
 
 .section-features,
@@ -299,15 +436,6 @@ a {
   width: 270px;
 }
 
-.section-tittle-special {
-  color: var(--tittle-text-color);
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
-  text-align: center;
-  margin-bottom: 50px;
-}
-
 .section-special {
   padding-bottom: 94px;
 }
@@ -326,8 +454,8 @@ a {
   left: 0;
   display: flex;
   justify-content: center;
-  padding-top: 27px;
-  padding-bottom: 27px;
+  height: 70px;
+  align-items: center;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -336,15 +464,6 @@ a {
   background-color: rgba(47, 48, 58, 0.8);
   width: 100%;
   height: 70;
-}
-
-.team-tittle {
-  color: var(--tittle-text-color);
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
-  text-align: center;
-  margin-bottom: 50px;
 }
 
 .team-name {
@@ -382,45 +501,9 @@ a {
   background-color: var(--white-color);
 }
 
-.team-soc {
-  gap: 10px;
-  display: flex;
-  justify-content: center;
-}
-
-.team-soc-icon {
-  fill: var(--icon-color);
-}
-.team-soc-link:hover .team-soc-icon, .team-soc-link:focus .team-soc-icon {
-  fill: var(--white-color);
-}
-
-.team-soc-link {
-  width: 44px;
-  height: 44px;
-  border-radius: 50%;
-  background-color: var(--white-color);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.team-soc-link:hover, .team-soc-link:focus {
-  background-color: var(--accent-color);
-}
-
 .customers {
   padding: 94px 0;
   background-color: var(--white-color);
-}
-
-.custom-tittle {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.16;
-  margin-bottom: 50px;
-  text-align: center;
-  color: var(--tittle-text-color);
 }
 
 .customers__list {
@@ -450,7 +533,7 @@ a {
   fill: var(--accent-color);
 }
 
-footer {
+.footer {
   background-color: var(--primary-text-color);
   padding: 60px 0;
 }
@@ -462,11 +545,6 @@ footer {
 .footer-logo {
   padding: 0;
   margin-bottom: 20px;
-}
-
-.footer-container {
-  display: flex;
-  align-items: baseline;
 }
 
 .address {
@@ -510,58 +588,16 @@ footer {
   margin-left: 70px;
 }
 
-.socio__list {
-  display: flex;
-  gap: 10px;
-}
-
-.socio__link {
-  width: 44px;
-  height: 44px;
-  border-radius: 50%;
-  background-color: rgba(255, 255, 255, 0.1);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.socio__link:hover,
-.socio__link:focus {
-  background-color: var(--accent-color);
-}
-
-.socio__icon {
-  fill: var(--white-color);
-}
-
-.socio__tittle {
-  text-transform: uppercase;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  color: var(--white-color);
-  margin-bottom: 20px;
-}
-
 .subscribe {
-  margin-left: 93px;
-}
-
-.subscribe__tittle {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: var(--white-color);
-  margin-bottom: 20px;
+  margin-left: auto;
 }
 
 .subscribe__icon {
-  position: absolute;
+  display: flex;
+  align-items: center;
   top: 13px;
-  right: 28px;
+  margin-left: 10px;
+  right: auto;
 }
 
 .pattern {
@@ -574,7 +610,7 @@ footer {
   background-color: transparent;
   outline: none;
   border: 1px solid rgba(255, 255, 255, 0.3);
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   padding-left: 16px;
   padding-top: 15px;
@@ -582,38 +618,10 @@ footer {
   color: rgba(255, 255, 255, 0.6);
   font-size: 16px;
   line-height: 1.25;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.pattern__button {
-  position: relative;
-  display: flex;
-  align-items: center;
-  text-align: center;
-  width: 200px;
-  height: 50px;
-  margin: 0 0 0 12px;
-  padding-left: 28px;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.87;
-  letter-spacing: 0.06em;
-  cursor: pointer;
-  color: var(--white-color);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.pattern__button:hover,
-.pattern__button:focus {
-  background-color: var(--secondary-button-colar);
-}
-
-/* button */
-.button {
-  font-family: inherit;
-  color: var(--white-color);
-  cursor: pointer;
+.pattern__input:hover, .pattern__input:focus {
+  border: 1px solid var(--accent-color);
 }
 
 .backdrop {
@@ -817,7 +825,7 @@ footer {
   background-color: var(--white-color);
 }
 
-main {
+body {
   background-color: var(--white-color);
 }
 
@@ -844,21 +852,6 @@ main {
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.06em;
-}
-
-.btn-list {
-  display: flex;
-  margin-bottom: 50px;
-  justify-content: center;
-  gap: 8px;
-}
-
-.button-portfolio {
-  padding: 6px 22px;
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.button-portfolio:hover, .button-portfolio:focus {
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .holder {
