--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -4,3 +4,13 @@
     padding-left: 15px;
     margin: 0 auto;
 }
+
+.header-container {
+    display: flex;
+    align-items: center;
+}
+
+.footer-container {
+    display: flex;
+    align-items: baseline;
+}
