--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,4 +1,4 @@
-footer {
+.footer {
     background-color: var(--primary-text-color);
     padding: 60px 0;
 }
@@ -12,10 +12,7 @@ footer {
     margin-bottom: 20px;
 }
 
-.footer-container {
-    display: flex;
-    align-items: baseline;
-}
+
 
 .address {
     display: block;
@@ -61,60 +58,25 @@ footer {
     margin-left: 70px;
 }
 
-.socio__list{
-    display: flex;
-    gap: 10px;
-}
 
-.socio__link {
-    width: 44px;
-    height: 44px;
-    border-radius: 50%;
-    background-color: rgba(255, 255, 255, 0.1);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.socio__link:hover,
-.socio__link:focus {
-    background-color: var(--accent-color);
-}
-
-.socio__icon {
-    fill: var(--white-color);
-}
-
-.socio__tittle {
-    text-transform: uppercase;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-    color: var(--white-color);
-    margin-bottom: 20px;
-}
 
 // ___________________________
 
 .subscribe {
-    margin-left: 93px;
+    margin-left: auto;
 }
 
-.subscribe__tittle {
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: var(--white-color);
-    margin-bottom: 20px;
-}
+
 
 .subscribe__icon {
-    position: absolute;
+    // position: absolute;
+    display: flex;
+        align-items: center;
+        // text-align: center;
     top: 13px;
-    right: 28px;
+    margin-left: 10px;
+    right: auto;
 }
 
 .pattern {
@@ -129,7 +91,7 @@ footer {
     background-color: transparent;
     outline: none;
     border: 1px solid rgba(255, 255, 255, 0.3);
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     padding-left: 16px;
     padding-top: 15px;
@@ -137,36 +99,16 @@ footer {
     color: rgba(255, 255, 255, 0.6);
     font-size: 16px;
     line-height: 1.25;
+
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover,
+    &:focus {
+            border: 1px solid var(--accent-color);
+        }
 }
 
-.pattern__button {
-    position: relative;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    width: 200px;
-    height: 50px;
-    margin: 0 0 0 12px;
-    padding-left: 28px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.87;
-    letter-spacing: 0.06em;
-    cursor: pointer;
-    color: var(--white-color);
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.pattern__button:hover,
-.pattern__button:focus {
-    background-color: var(--secondary-button-colar);
-}
 
-/* button */
-.button {
-    font-family: inherit;
-    color: var(--white-color);
-    cursor: pointer;
-}
+
+
