--- a/sass/layout/_special.scss
+++ b/sass/layout/_special.scss
@@ -1,9 +1,4 @@
-.section-tittle-special{
-    color: var(--tittle-text-color);
-    @include font(700, 36px, 1.17, null);
-        text-align: center;
-        margin-bottom: 50px;
-}
+
 
 .section-special {
     padding-bottom: 94px;
@@ -27,8 +22,10 @@
 
     display: flex;
     justify-content: center;
-    padding-top: 27px;
-    padding-bottom: 27px;
+    height: 70px;
+    align-items: center;
+    // padding-top: 27px;
+    // padding-bottom: 27px;
 
     @include font(700, 14px, 1.14, null);
     
