--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -1,11 +1,4 @@
-.team-tittle{
-    color: var(--tittle-text-color);
 
-    @include font(700, 36px, 1.17, null);
-        text-align: center;
-    
-    margin-bottom: 50px;
-}
 
 .team-name {
     color: var(--tittle-text-color);
@@ -46,36 +39,20 @@
 
 
 
-.team-soc {
-    gap: 10px;
-    display: flex;
-    justify-content: center;
-}
-
-.team-soc-icon {
-    fill: var(--icon-color);
-    .team-soc-link:hover &,
-.team-soc-link:focus &{
-    fill:var(--white-color) ;
-}
-}
-
-.team-soc-link{
-width: 44px;
-height: 44px;
-border-radius: 50%; 
-
-background-color:var(--white-color);
-display: flex;
-justify-content: center;
-align-items: center;
-
-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) , fill 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
-        &:hover , &:focus {
-            background-color:var(--accent-color) ;
-        }
-
-}
 
 
 
+
+// .soc-link {
+
+//     width: 44px;
+//         height: 44px;
+//         border-radius: 50%;
+    
+//         display: flex;
+//             justify-content: center;
+//             align-items: center;
+        
+//         transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+// }
