--- a/sass/layout/_modal.scss
+++ b/sass/layout/_modal.scss
@@ -162,8 +162,13 @@
         }
 }
 
+// .modal-check:focus+.check-icon {
+//     border-color: var(--accent-color);
+// }
 
-
+.modal-check:focus + .span {
+    border: 2px solid var(--accent-color);
+}
 
 
 .check-icon {
@@ -174,6 +179,7 @@
 }
 
 }
+
 
 .condition {
     color: var(--accent-color);
@@ -225,11 +231,18 @@
     background-color: var(--white-color);
     border-radius: 50%;
 
-  
-}
-
-.close-icon {
-    display: flex;
+      display: flex;
     justify-content: center;
     align-items: center;
+
+    transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close-btn__icon {
+fill: currentColor;
+}
+
+.modal-close:hover ,
+.modal-close:focus {
+ color:var(--accent-color);
 }
